# RandomForestFapar-projrct

./: INTRODUCTION.md  README.md  environment.yml  estimation.py  pyproject.toml
processing/: RF_processing.py  splits_processing.py
utils/: metrics.py
